--- a/package.json
+++ b/package.json
@@ -27,8 +27,7 @@
     "font-awesome-icons": "^1.6.0",
     "hammerjs": "^2.0.8",
     "lint": "^0.7.0",
-    "primeicons": "^5.0.0",
-    "primeng": "^14.2.3",
+    "primeng": "~14.2.3",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
